Removed NavBar z-index bug

--- a/css/nav.css
+++ b/css/nav.css
@@ -15,6 +15,7 @@ nav {
   border-bottom: 3px solid #04c2c9;
   color: #ffffff;
   height: 50px;
+  z-index: 1;
 }
 
 nav .fa-bars {
